--- a/BEPUutilities/BEPUutilities.csproj
+++ b/BEPUutilities/BEPUutilities.csproj
@@ -10,7 +10,8 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BEPUutilities</RootNamespace>
     <AssemblyName>BEPUutilities</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -100,6 +101,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <!-- A reference to the entire .NET Framework is automatically included -->
+    <None Include="project.json" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="ContainmentType.cs" />
     <Compile Include="ConvexHullHelper.cs" />
     <Compile Include="ConvexHullHelper.Pruning.cs" />
@@ -108,13 +113,15 @@
     <Compile Include="DataStructures\QuickQueue.cs" />
     <Compile Include="DataStructures\QuickSet.cs" />
     <Compile Include="Int2.cs" />
+    <Compile Include="NotFiniteNumberException.cs" />
     <Compile Include="PermutationMapper.cs" />
     <Compile Include="ResourceManagement\BufferPool.cs" />
     <Compile Include="ResourceManagement\BufferPools.cs" />
     <Compile Include="ResourceManagement\LockingBufferPool.cs" />
     <Compile Include="Threading\IParallelLooper.cs" />
-    <Compile Include="Threading\ParallelLooper.cs" />
-    <Compile Include="Threading\ParallelLoopWorker.cs" />
+    <None Include="Threading\ParallelLooper.cs" />
+    <None Include="Threading\ParallelLoopWorker.cs" />
+    <None Include="Threading\TaskParallelLooper.cs" />
     <Compile Include="Vector4.cs" />
     <Compile Include="DataStructures\ConcurrentDeque.cs" />
     <Compile Include="AffineTransform.cs" />
@@ -153,10 +160,7 @@
     <Compile Include="SpinLock.cs" />
     <Compile Include="Toolbox.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
